--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -614,6 +614,9 @@
     <Content Include="media\door.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Resources\LunaBlanco.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <None Include="Resources\editcorreo.png" />
     <None Include="Resources\correo.png" />
     <None Include="Resources\gmail_icon-icons.com_59877 %281%29.png" />
